plugins {
    id 'java-library'
    id 'io.freefair.lombok' version '9.1.0'
    id 'jacoco'
}

group = 'io.github.yvasyliev.deezer'
version = '3.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    api platform('io.github.openfeign:feign-bom:13.6')
    implementation platform('tools.jackson:jackson-bom:3.0.3')

    api 'io.github.openfeign:feign-core'
    api 'io.github.openfeign:feign-form'
    api 'tools.jackson.core:jackson-databind'
}

testing {
    suites {
        configureEach {
            useJUnitJupiter()

            dependencies {
                implementation platform('org.junit:junit-bom:6.0.3')
                implementation platform('org.mockito:mockito-bom:5.22.0')
                implementation platform('org.assertj:assertj-bom:3.27.7')

                implementation 'org.junit.jupiter:junit-jupiter'
                implementation 'org.mockito:mockito-junit-jupiter'
                implementation 'org.assertj:assertj-core'

                runtimeOnly 'org.junit.platform:junit-platform-launcher'
            }
        }

        integrationTest(JvmTestSuite) {
            configurations.named(sources.implementationConfigurationName) {
                extendsFrom(configurations.implementation)
            }

            dependencies {
                implementation project()

                implementation 'org.wiremock:wiremock:3.13.2'
            }

            targets {
                configureEach {
                    testTask.configure {
                        shouldRunAfter(test)
                    }
                }
            }
        }
    }
}

check {
    dependsOn integrationTest
}

jacocoTestReport {
    dependsOn test, integrationTest

    executionData(
            tasks.named('test').get().extensions.getByType(JacocoTaskExtension).destinationFile,
            tasks.named('integrationTest').get().extensions.getByType(JacocoTaskExtension).destinationFile
    )

    reports {
        xml.required = true
    }
}

integrationTest {
    finalizedBy jacocoTestReport
}

tasks.named('integrationTest') {
    finalizedBy jacocoTestReport
}
